Agent Frament Done

--- a/app/src/main/res/drawable/ic_dots.xml
+++ b/app/src/main/res/drawable/ic_dots.xml
@@ -1,9 +1,4 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-        android:width="24dp"
-        android:height="24dp"
-        android:viewportWidth="24.0"
-        android:viewportHeight="24.0">
-    <path
-        android:fillColor="#FF000000"
-        android:pathData="M3,18h18v-2L3,16v2zM3,13h18v-2L3,11v2zM3,6v2h18L21,6L3,6z"/>
+<vector android:height="24dp" android:viewportHeight="408.0"
+    android:viewportWidth="408.0" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#FCFCFC" android:pathData="M204,102c28,0 51,-23 51,-51S232.1,0 204,0s-51,23 -51,51S175.9,102 204,102zM204,153c-28,0 -51,23 -51,51s23,51 51,51s51,-23 51,-51S232.1,153 204,153zM204,306c-28,0 -51,23 -51,51s23,51 51,51s51,-23 51,-51S232.1,306 204,306z"/>
 </vector>
